--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "styles:build": "sass ./src/scss/styles.scss ./dist/styles/styles.css",
+    "styles:watch": "sass --watch ./src/scss/styles.scss ./dist/styles/styles.css"
   },
   "keywords": [],
   "author": "",
