grunt concat scripts

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^1.6.1",
-    "grunt-contrib-jshint": "^3.2.0"
+    "grunt-contrib-concat": "^2.1.0"
   }
 }
